Updated mobile first layout issues for content.

--- a/sass/partials/_content.scss
+++ b/sass/partials/_content.scss
@@ -38,12 +38,24 @@ body{
 		order:1;
 		background:white;
 		padding: 1rem 2rem;
+		-webkit-flex-flow: column wrap; // Column wrap for small devices
+		flex-flow:column wrap;
+		-webkit-justify-content:space-around;
+		justify-content:space-around;
+		width:100%;
 		@media (min-width:$screen-medium){
+			-webkit-flex-flow: column wrap; // Column wrap for small devices
+			flex-flow:column wrap;
 			margin:1.5rem 0;
 			-webkit-flex:2 75%;
 			flex:2 75%;
 		}
 		&.landing-page{
+			margin:1.5rem 0;
+			-webkit-order:1;
+			order:1;
+			background:white;
+			padding: 1rem 2rem;
 			@media (min-width:$screen-medium){
 				-webkit-flex:2 65%;
 				flex:2 65%;
@@ -54,7 +66,14 @@ body{
 		-webkit-order:2;
 		order:2;
 		padding:1rem 2rem;
+		-webkit-flex-flow: column wrap; // Column wrap for small devices
+		flex-flow: column wrap;
+		-webkit-justify-content:space-around;
+		justify-content:space-around;
+		width:100%;
 		@media (min-width:$screen-medium){
+			-webkit-flex-flow: column wrap; // Column wrap for small devices
+			flex-flow:column wrap;
 			margin:1.5rem 0;
 			-webkit-flex:1 25%;
 			flex:1 25%;
