--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -116,12 +116,14 @@ nav{
 		padding:0;
 		@include flexBox();
 		-webkit-flex-flow: column wrap; // Column wrap for small devices
+		flex-flow: column wrap;
 		-webkit-justify-content:space-around;
 		justify-content:space-around;
 		width:100%;
 		
 		@media(min-width:$screen-medium){
 			-webkit-flex-flow:row wrap;
+			flex-flow:row wrap;
 			flex-flow:row wrap;
 			-webkit-justify-content:flex-start;
 			justify-content: flex-start;
